--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "editor.fontSize": 30
+    "editor.fontSize": 30,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./images",
+        "-p",
+        "*test.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true
 }
