updated the utils

--- a/conf/data/default.yaml
+++ b/conf/data/default.yaml
@@ -1,3 +1,4 @@
-pdf_file: ../../data/dataset/sines.pdf
-text_file: ../../data/dataset/sines.txt
+pdf_file: E:/rag_chatbot/RAG-Powered-Chatbot-with-LLM/dataset/sines.pdf
+text_file: E:/rag_chatbot/RAG-Powered-Chatbot-with-LLM/dataset/sines.txt
+
 
