updated the repo

--- a/conf/data/default.yaml
+++ b/conf/data/default.yaml
@@ -1,4 +1,4 @@
-pdf_file: E:/rag_chatbot/RAG-Powered-Chatbot-with-LLM/dataset/sines.pdf
-text_file: E:/rag_chatbot/RAG-Powered-Chatbot-with-LLM/dataset/sines.txt
+pdf_file: dataset/sines.pdf
+text_file: dataset/sines.txt
 
 
